# aiqubits-gear-academy

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
io/: Cargo.toml
io/src/: lib.rs
pebbles-state/: Cargo.toml
pebbles-state/src/: lib.rs
src/: lib.rs
test/: basic.rs
tests/: basic.rs
